{
    "name": "InputActions",
    "maps": [
        {
            "name": "KeayboardAndMouse",
            "id": "ac6a5113-7e45-4480-8c53-832ad53fe6b6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "917a5959-b091-401e-9bc5-8d9f18708cc7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "84b4f020-84a4-4dfe-91a5-5406a9d96949",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IsAiming",
                    "type": "Value",
                    "id": "56b48373-ed22-4e25-859f-5524a343fe02",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PoinerPosition",
                    "type": "Value",
                    "id": "8920dc7f-9ca2-4dcd-9d3d-11e687468a4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "a4ce72d5-753b-45dd-8a23-f739e145bcb2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "258b1641-c6ab-4d51-9459-fea93ba06775",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e641da7f-600f-4846-a568-706f08ff9156",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7491972b-41f4-4d0f-93e6-27dc988ccebe",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "495f040e-d935-4e14-822d-4a6e51a836af",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0f9c4074-7714-480a-973f-a41847d21303",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5166b89b-b3d1-4481-8b09-4738946724c3",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "IsAiming",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12d71547-4cbb-45f1-a1d7-b2b219145098",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "PoinerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Main",
            "bindingGroup": "Main",
            "devices": []
        }
    ]
}